// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly HomePage component 1`] = `
<div>
  <div
    className="tailTop"
  >
    <p
      className="header"
    >
      FIND YOUR MOVIE
    </p>
    <div
      className="search"
    >
      <div
        className="inputSearch"
      >
        <input
          className="size"
        />
      </div>
       
      <div
        className="buttonComponent"
      >
        <button>
          Search
        </button>
      </div>
    </div>
    <div
      className="searchFilter"
    >
      <p>
        SEARCH BY     
      </p>
      <div>
        <div
          className="form_toggle"
        >
          <div
            className="form_toggle_item item_1"
          >
            <input
              defaultChecked={true}
              id="fid_1"
              name="radio"
              type="radio"
              value="off"
            />
            <label
              htmlFor="fid_1"
            >
              TITLE
            </label>
          </div>
          <div
            className="form_toggle_item item_2"
          >
            <input
              id="fid_2"
              name="radio"
              type="radio"
              value="on"
            />
            <label
              htmlFor="fid_2"
            >
              GENRE
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    className="midleLine"
  >
    <div
      className="resultsCount"
    >
      <p>
        X movie found
      </p>
    </div>
     
    <div
      className="resultsSort"
    >
      <div>
        <p>
          SORT BY     
        </p>
      </div>
      <div>
        <div
          className="form_toggle"
        >
          <div
            className="form_toggle_item item_1"
          >
            <input
              defaultChecked={true}
              id="fid_3"
              name="radio1"
              type="radio"
              value="off"
            />
            <label
              htmlFor="fid_3"
            >
              TITLE
            </label>
          </div>
          <div
            className="form_toggle_item item_2"
          >
            <input
              id="fid_4"
              name="radio1"
              type="radio"
              value="on"
            />
            <label
              htmlFor="fid_4"
            >
              GENRE
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
   
  <div
    className="body"
  >
    <div
      className="indent1"
    >
      <ul
        className="movieList"
      >
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/topgun.jpg"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Top Gun
            </b>
            <p>
              1994
            </p>
          </div>
          <p>
            Action
          </p>
        </li>
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/terminator.jpg"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Terminator
            </b>
            <p>
              1984
            </p>
          </div>
          <p>
            Science fiction/Action
          </p>
        </li>
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/Blue_Velvet.jpg"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Blue Velvet
            </b>
            <p>
              1986
            </p>
          </div>
          <p>
            Detective film/Thriller
          </p>
        </li>
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/Vanishing_Point.jfif"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Vanishing Point
            </b>
            <p>
              1971
            </p>
          </div>
          <p>
            Action / Cult Movie
          </p>
        </li>
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/Death_Proof.jpg"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Death Proof
            </b>
            <p>
              2007
            </p>
          </div>
          <p>
            Action/Horror
          </p>
        </li>
        <li
          className="indent"
          onClick={[Function]}
        >
          <img
            className="imgStyle"
            src="../../../../../images/Lincoln_Lawyer.jpg"
          />
          <div
            className="description"
          >
            <b
              className="rightB"
            >
              Lincoln Lawyer
            </b>
            <p>
              2011
            </p>
          </div>
          <p>
            Thriller/Crime
          </p>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`render correctly MovieList component 1`] = `
<div
  className="indent1"
>
  <ul
    className="movieList"
  >
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/topgun.jpg"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Top Gun
        </b>
        <p>
          1994
        </p>
      </div>
      <p>
        Action
      </p>
    </li>
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/terminator.jpg"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Terminator
        </b>
        <p>
          1984
        </p>
      </div>
      <p>
        Science fiction/Action
      </p>
    </li>
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/Blue_Velvet.jpg"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Blue Velvet
        </b>
        <p>
          1986
        </p>
      </div>
      <p>
        Detective film/Thriller
      </p>
    </li>
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/Vanishing_Point.jfif"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Vanishing Point
        </b>
        <p>
          1971
        </p>
      </div>
      <p>
        Action / Cult Movie
      </p>
    </li>
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/Death_Proof.jpg"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Death Proof
        </b>
        <p>
          2007
        </p>
      </div>
      <p>
        Action/Horror
      </p>
    </li>
    <li
      className="indent"
      onClick={[Function]}
    >
      <img
        className="imgStyle"
        src="../../../../../images/Lincoln_Lawyer.jpg"
      />
      <div
        className="description"
      >
        <b
          className="rightB"
        >
          Lincoln Lawyer
        </b>
        <p>
          2011
        </p>
      </div>
      <p>
        Thriller/Crime
      </p>
    </li>
  </ul>
</div>
`;
